Bug 388927 - Assert when using Save Incremental on an unsaved image
Summary: Assert when using Save Incremental on an unsaved image
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: 4.0.0-beta.1
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-01-13 21:14 UTC by razvanc87
Modified: 2018-01-17 12:40 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description razvanc87 2018-01-13 21:14:29 UTC
On linux, Ubuntu 17.04 at least, both Save Incremental Version & Backup gives an error if I don't save the file beforehand (the regular way with CTLR + S).

Save Incremental Version & Backup give the same error:
ASSERT (krita): "job.isValid()" in file /krita-4.0.0.51/libs/ui/KisDocument.cpp, line 689
Aborted (core dumped)
Comment 1 Halla Rempt 2018-01-17 12:22:31 UTC
Backtrace: 

Thread 1 (Thread 0x7f1d2dbff940 (LWP 26180)):
[KCrash Handler]
#6  0x00007f1d21acf8d7 in raise () from /lib64/libc.so.6
#7  0x00007f1d21ad0caa in abort () from /lib64/libc.so.6
#8  0x00007f1d2277856e in QMessageLogger::fatal(char const*, ...) const () from /usr/lib64/libQt5Core.so.5
#9  0x00007f1d2906cf9c in kis_assert_common (assertion=0x7f1d2d5e0903 "!job.mimeType.isEmpty()", file=0x7f1d2d5e0450 "/home/boud/dev/krita/libs/ui/KisDocument.cpp", line=524, throwException=false, isIgnorable=true) at /home/boud/dev/krita/libs/global/kis_assert.cpp:90
#10 0x00007f1d2906d2f3 in kis_safe_assert_recoverable (assertion=0x7f1d2d5e0903 "!job.mimeType.isEmpty()", file=0x7f1d2d5e0450 "/home/boud/dev/krita/libs/ui/KisDocument.cpp", line=524) at /home/boud/dev/krita/libs/global/kis_assert.cpp:108
#11 0x00007f1d2d36d494 in KisDocument::exportDocumentImpl (this=0x9e4db20, job=..., exportConfiguration=...) at /home/boud/dev/krita/libs/ui/KisDocument.cpp:524
#12 0x00007f1d2d36d8ae in KisDocument::saveAs (this=0x9e4db20, url=..., mimeType=..., showWarnings=true, exportConfiguration=...) at /home/boud/dev/krita/libs/ui/KisDocument.cpp:566
#13 0x00007f1d2d3db3f8 in KisViewManager::slotSaveIncremental (this=0x781b9d0) at /home/boud/dev/krita/libs/ui/KisViewManager.cpp:978
#14 0x00007f1d2d444b4f in KisViewManager::qt_static_metacall (_o=0x781b9d0, _c=QMetaObject::InvokeMetaMethod, _id=13, _a=0x7ffe9c1a48e0) at /home/boud/dev/b-krita/libs/ui/moc_KisViewManager.cpp:180
#15 0x00007f1d2296f1df in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib64/libQt5Core.so.5
#16 0x00007f1d2387b8f2 in QAction::triggered(bool) () from /usr/lib64/libQt5Widgets.so.5
#17 0x00007f1d2387e05d in QAction::activate(QAction::ActionEvent) () from /usr/lib64/libQt5Widgets.so.5
#18 0x00007f1d239ede32 in ?? () from /usr/lib64/libQt5Widgets.so.5
#19 0x00007f1d239f4814 in ?? () from /usr/lib64/libQt5Widgets.so.5
#20 0x00007f1d239f573b in QMenu::mouseReleaseEvent(QMouseEvent*) () from /usr/lib64/libQt5Widgets.so.5
#21 0x00007f1d238bd5b7 in QWidget::event(QEvent*) () from /usr/lib64/libQt5Widgets.so.5
#22 0x00007f1d239f7a8b in QMenu::event(QEvent*) () from /usr/lib64/libQt5Widgets.so.5
#23 0x00007f1d23881cbc in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib64/libQt5Widgets.so.5
#24 0x00007f1d238890ac in QApplication::notify(QObject*, QEvent*) () from /usr/lib64/libQt5Widgets.so.5
#25 0x00007f1d2d362a39 in KisApplication::notify (this=0x7ffe9c1a58f0, receiver=0x9942250, event=0x7ffe9c1a4ff0) at /home/boud/dev/krita/libs/ui/KisApplication.cpp:600
#26 0x00007f1d22945d25 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /usr/lib64/libQt5Core.so.5
#27 0x00007f1d23887f29 in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool) () from /usr/lib64/libQt5Widgets.so.5
#28 0x00007f1d238d5a2c in ?? () from /usr/lib64/libQt5Widgets.so.5
#29 0x00007f1d238d8253 in ?? () from /usr/lib64/libQt5Widgets.so.5
#30 0x00007f1d23881cbc in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib64/libQt5Widgets.so.5
#31 0x00007f1d23888a10 in QApplication::notify(QObject*, QEvent*) () from /usr/lib64/libQt5Widgets.so.5
#32 0x00007f1d2d362a39 in KisApplication::notify (this=0x7ffe9c1a58f0, receiver=0x9014e50, event=0x7ffe9c1a5520) at /home/boud/dev/krita/libs/ui/KisApplication.cpp:600
#33 0x00007f1d22945d25 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /usr/lib64/libQt5Core.so.5
#34 0x00007f1d22f0980d in QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) () from /usr/lib64/libQt5Gui.so.5
#35 0x00007f1d22f0b3c5 in QGuiApplicationPrivate::processWindowSystemEvent(QWindowSystemInterfacePrivate::WindowSystemEvent*) () from /usr/lib64/libQt5Gui.so.5
#36 0x00007f1d22ee98ab in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQt5Gui.so.5
#37 0x00007f1d16dd35b0 in ?? () from /usr/lib64/libQt5XcbQpa.so.5
#38 0x00007f1d1dd4b134 in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#39 0x00007f1d1dd4b388 in ?? () from /usr/lib64/libglib-2.0.so.0
#40 0x00007f1d1dd4b42c in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#41 0x00007f1d22996dbc in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQt5Core.so.5
#42 0x00007f1d2294401b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQt5Core.so.5
#43 0x00007f1d2294c5e4 in QCoreApplication::exec() () from /usr/lib64/libQt5Core.so.5
#44 0x000000000040a0e6 in main (argc=1, argv=0x7ffe9c1a61f8) at /home/boud/dev/krita/krita/main.cc:306
Comment 2 Halla Rempt 2018-01-17 12:40:28 UTC
Git commit 5cec1965da6e739be5f6bebca9045daf7906013d by Boudewijn Rempt.
Committed on 17/01/2018 at 12:39.
Pushed by rempt into branch 'master'.

Fix a crash when using save incremental or save backup

When the document hasn't been saved before, Krita should
do a normal save instead of an incremental or incremental
backup save.

M  +0    -4    libs/ui/KisMainWindow.h
M  +13   -0    libs/ui/KisViewManager.cpp

https://commits.kde.org/krita/5cec1965da6e739be5f6bebca9045daf7906013d