Fix a crash when using save incremental or save backup

When the document hasn't been saved before, Krita should
do a normal save instead of an incremental or incremental
backup save.

BUG:388927